# TSB-SEG

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
tsseg-exp/: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
tsseg-exp/benchmark/: typology.json
tsseg-exp/benchmark/analysis/: __init__.py  __main__.py  data.py  error_decomp.py  error_mix.py  excluded_algos_analysis.py  feature_sensitivity.py  helpers.py  hyperparameters_figs.py  main_pool_grid_table.py  metric_correlations.py  pamap2.py  performance.py  performance_tables.py  residual_dist.py  runtime.py  runtime_split.py  scalability.py  scatter.py  score_runtime_split.py  sms_breakdown.py
tsseg-exp/benchmark/configs/: benchmark_config_v3.yaml
tsseg-exp/benchmark/datasets/: dataset_features.csv  tssb.csv  utsa.csv
tsseg-exp/configs/: benchmark_config.yaml  config.yaml
tsseg-exp/configs/algorithm/: amoc.yaml  autoplait.yaml  binseg.yaml  bocd.yaml  bottomup.yaml  changefinder.yaml  clasp.yaml  dynp.yaml  e2usd.yaml  eagglo.yaml  fluss.yaml  fm-agglom-v4.yaml  ggs.yaml  hdp-hsmm.yaml  hidalgo.yaml  icid.yaml  igts.yaml  kcpd.yaml  patss.yaml  pelt.yaml  prophet.yaml  tglad.yaml  ticc.yaml  time2state.yaml  tire.yaml  tscp2.yaml  vsax.yaml  window.yaml
tsseg-exp/configs/dataset/: actrectut.yaml  has.yaml  mocap.yaml  pamap2.yaml  pump.yaml  skab.yaml  tssb.yaml  usc-had.yaml  utsa.yaml
tsseg-exp/configs/experiment/: grid_supervised.yaml  unsupervised.yaml  (+4 more)
tsseg-exp/scripts/: README.md  run_baseline_benchmark.sh  run_experiments.sh  run_grid_experiments.sh
(+142 files in other folders)
